apps/inscripciones-juventud/inscripciones-juventud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inscripciones-juventud
  namespace: inscripciones-juventud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: inscripciones-juventud
  template:
    metadata:
      labels:
        app: inscripciones-juventud
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: inscripciones-juventud-data
      containers:
        - name: app
          image: alraro/inscripciones-juventud:1.2.1
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: inscripciones-juventud
  namespace: inscripciones-juventud
spec:
  type: ClusterIP
  selector:
    app: inscripciones-juventud
  ports:
    - port: 80
      targetPort: 5000
